--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -8,7 +8,7 @@ FDA.........<br><img align="bottom" src="https://www.epochtimes.com/assets/theme
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083029.md#1" target="_blank">起诉政府 中共肺炎病逝者亲属遭中共压制</a><br></h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083029.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1OD5D4-600x399-150x120.jpg" align ="left"></a>在中共病毒（武汉肺炎）大流行最先爆发地武汉，警察威胁并质问那些悲痛的中共肺炎遇难者亲属。政府警告律师不要帮助这些悲痛的人起诉政府。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月05日 9:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083129.md#1" target="_blank">王全璋详述冤情：定不了煽颠罪 就定颠覆罪</a><br></h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083129.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1210853604-150x120.jpg" align ="left"></a>2015年七月，中国发生了一起震惊中外的709维权律师大抓捕事件，全国23个省份一百多名律师、维权人士被逮捕、传唤、刑拘。在这场白色恐怖中，作为北京锋锐律师事务所律师的王全璋也失踪了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月05日 8:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083104.md#1" target="_blank">中共长臂深入美国大学 国会议员展开调查</a><br></h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083104.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2016/03/1408270127082483-150x120.jpg" align ="left"></a>周一（5月4日），美国共和党资深众议员宣布调查中共在美国的学术间谍活动，要求教育部提供所有相关资料。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月05日 8:35 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080385.md#1" target="_blank">【一线采访】疫情下 大陆教育培训业关店频</a><br></h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080385.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/VCG111254332907-600x400-150x120.jpg" align ="left"></a>中共病毒全球肆虐，重挫各行各业。尽管目前中国各地已开始复工复产，但人员聚集性行业的教育培训业仍举步维艰。有从业者表示，大批家教失业，关店频现。
+<tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080385.md#1" target="_blank">【一线采访】疫情下 大陆教育培训业关店频现</a><br></h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080385.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/VCG111254332907-600x400-150x120.jpg" align ="left"></a>中共病毒全球肆虐，重挫各行各业。尽管目前中国各地已开始复工复产，但人员聚集性行业的教育培训业仍举步维艰。有从业者表示，大批家教失业，关店频现。
 
 深圳某私人教育培训机构负责人孟先生近日对大纪元表示，作为聚集性行业的教育培训业受到严重影响，整个线下教育培训行业处于停滞状态，关店现象频频出现。
 
