--- a/gb/news2008_3.md
+++ b/gb/news2008_3.md
@@ -40,7 +40,7 @@
 
 2020年款RAM 1500，是车系的第五代产品，不论在耐用性、技术、效率和便利性各方面都有显着.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年04月25日 11:09 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/24/n12059194.md#1" target="_blank">发烧怎么办？7大原因告诉你</a><br></h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/24/n12059194.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/04/shutterstock1_709324180-150x120.jpg" align ="left"></a>近来，由于中共肺炎（又称武汉肺炎、新冠肺炎）疫情流行，出现发烧症状往往令人格外警惕。其实，发烧是身体对抗病毒、细菌或发炎的生理现象，导致发烧的原因有很多。发烧大部分情况下都会自行痊愈，只有少部分的状况必须特别注意。除了中共肺炎，有哪些疾病会导致发烧，该如何应对？1. 普通感冒；2. 流感；3. 肠病毒......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年04月25日 2:39 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/20/n12047095.md#1" target="_blank">【罗厨寻味】腊味煲仔饭</a><br></h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/20/n12047095.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/04/05ab7df540a2a17fc7d56d3d362d83d1-150x120.jpg" align ="left"></a>煲仔饭的用料灵活多样，可因时、因地而异。罗厨制作的这道腊味煲仔饭，选用腊肠、带壳鲜虾和香菇等为配料，兼顾美味和营养。米饭煮好后，腊味和鲜虾的香气和营养完全融入其中。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年04月25日 2:18 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/26/n12062045.md#1" target="_blank">过去15年 西澳建房成本飙涨逾七成</a><br></h3>日前，澳洲统计局（ABS）公布了一份最新报告，具体说明了在过去15年，澳洲住房建筑成本与住房面积的变化，其中，西澳建房成本涨幅全澳居首。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年04月28日 1:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/26/n12062020.md#1" target="_blank">西澳房市稳定 业主不急卖房</a><br></h3>虽然中共肺炎肆虐全球，澳洲经济受到很大冲击，然而，最新数据显示，珀斯房价增长趋缓， 截至目前，市场上并未出现由疫情引发业主急于卖房脱手的现象。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年04月28日 1:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/news2008_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/news2008_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/eyk232/djy/blob/master/gb/news2008_3.md#1<br><a href="https://github.com/eyk232/djy/blob/master/gb/news2008_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/eyk232/djy/blob/master/gb/news2008_3.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2008_3.htm">https://www.epochtimes.com/gb/news2008_3.htm</a>    （国内需<a href="https://github.com/eyk232/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</p>
