--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -3,7 +3,7 @@
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083426.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/02/000_1PB35M-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083426.md#1" target="_blank">【翻墙必看】党员成中共病毒“靶点”</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：...<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083609.md#1" target="_blank"><img width="220" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083609.md#1" target="_blank">安徽80余人参加周岁宴 55人发烧呕吐</a><br></h3>近期，安徽省五河县80余人参加小孩周岁宴后，截止5月4日中午，有5......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083397.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/download-13-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083397.md#1" target="_blank">【拍案惊奇】韩朝边境驳火 传中共公安遭整肃</a><br></h3>我们前一期节目是在上个周五，5月1日做的。当时我们在节目最前面插播......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
-<tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083279.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/04/GettyImages-81490846@1200x1200-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083279.md#1" target="_blank">【最新疫情5·5】澳纽两国考虑恢复航班</a><br></h3>5月5日全球中共病毒（武汉肺炎）疫情最新情况：
+<tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083279.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/03/2020-03-18-17581-GettyImages-1211488862-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083279.md#1" target="_blank">【最新疫情5·5】澳纽两国考虑恢复航班</a><br></h3>5月5日全球中共病毒（武汉肺炎）疫情最新情况：
 
 中共肺炎全球......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083517.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/04/0Y0A8839-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083517.md#1" target="_blank">马来西亚卫生总监夸台湾防疫成功 值得效仿</a><br></h3>马来西亚卫生总监诺希山5月4日在记者会上赞扬台湾，即使没有实施行动......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
