--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112865.md#1" title="美将切断全球芯片制造商向华为供货""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/05/800px-Commerce_Department_DC-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112673.md#1" title="【直播】5.15白宫简报会 半数州新病例下降""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/download-64-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/carc2844/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://carc2844.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114289.md#1">北京遭遇沙尘袭击 PM10浓度达重度污染</a><br>
-:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112852.md#1">假疫苗受害儿童家长在京向两会发公开信</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114269.md#1">疫情恶化 吉林市关停个体诊所和门诊部</a><br>
-:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114122.md#1">组图：台风黄蜂袭菲律宾 房屋损毁民众疏散</a><br>
-:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114278.md#1">国际挺台入WHA 中共施压谭德塞密信遭曝光</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12113626.md#1">【最新疫情5·16】川普或恢复世卫部分资助</a><br>
+:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114289.md#1">北京遭遇沙尘袭击 PM10浓度达重度污染</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112852.md#1">假疫苗受害儿童家长在京向两会发公开信</a><br>
+:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114269.md#1">疫情恶化 吉林市关停个体诊所和门诊部</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114122.md#1">组图：台风黄蜂袭菲律宾 房屋损毁民众疏散</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114278.md#1">国际挺台入WHA 中共施压谭德塞密信遭曝光</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12113626.md#1">【最新疫情5·16】川普或恢复世卫部分资助</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109049.md#1">网曝习近平讲话：中共内部有“反习集团”</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110735.md#1">【翻墙必看】女预言家：2020年大决战</a><br>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 356,180,674 人
+!共 356,183,794 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
