--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -23,7 +23,7 @@
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/10/n12097175.md#1" target="_blank">天才预言家珍妮  2020年大决战预言</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/10/n12097175.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/b221237e0b5d62c0fb74af3637314066-150x120.jpg" align ="left"></a>天才女预言家珍妮·狄克逊曾经预言了一些令人意外、震惊的二十世纪大事。在她生前，她预言2020年世界将遭遇“善恶大决战”——反神者与信神者的大决战。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月13日 6:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/16/9/28/n8345456.md#1" target="_blank">秤砣一击 寇准幡然悔悟</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/16/9/28/n8345456.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2016/07/1607151057312357-150x120.jpg" align ="left"></a>寇准俸禄虽多，却不肯建造宅第。隐士魏野，为此特意赠送给他二首诗，其中有句道：“有官居鼎鼐，无地起楼台。”称赞寇准虽位居显要，却不肯建造宅第。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月13日 5:34 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/3/n12079813.md#1" target="_blank">向神祈祷为何不灵 自求多福怎么求？</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/3/n12079813.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/e4eb57dc0f16c9d96d141b91ffb235c2-150x120.jpg" align ="left"></a>向神祈祷为何不灵？ 唐宪宗曾问宰相李藩道：“祭祀神明穰灾祈福的做法，真实可信吗？”“自求多福”怎么求？《诗经》怎么说？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月13日 4:00 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12104556.md#1" target="_blank">大英博物馆200万件艺术品 图片免费使用</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12104556.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/the-british-museum-4170670_1920-150x120.jpg" align ="left"></a>位于英国伦敦的大英博物馆（British Museum）是世界上最著名的博物馆之一，拥有大量收藏品，经常吸引来自世界各地的游客造访。但受到中共肺炎（武汉肺炎）疫情的影响，该馆目前关闭。也因为如此，该馆将网上收藏品增加至大约450万件，供人们在家里参观，而且允许人们免费使用其中大约200万件的图片。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月13日 3:09 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114257.md#1" target="_blank">新诗：送别老诗人赵天仪</a><br></h3>乐在写诗，耕耘大半辈子 曾经聆听你说诗读诗 内心波动不已 此刻你背起背包独自到另一个国度去旅行......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月16日 7:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112864.md#1" target="_blank">捣练子．茶道无尘</a><br></h3> 茶淡色， 叶淳心， 细品修行聆圣吟。 浅卧幽居行大善， 修心断欲炼纯金。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月16日 12:30 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112833.md#1" target="_blank">五律：大河初夏</a><br></h3>悠悠云朵朵，
 澹澹水盈盈。
