--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -32,7 +32,7 @@
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112723.md#1" target="_blank">质量太差 欧盟叫停一千万片中国口罩</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112723.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/4dc80830107428e09d2c51109f6969da-150x120.jpg" align ="left"></a>欧盟委员会周四（5月14日）表示，在两个欧洲国家抱怨收到的中国口罩质量太差之后，已暂停向成员国和英国运送1000万片中国口罩。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月16日 12:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111711.md#1" target="_blank">英20名议员吁修贸易案 摆脱对华依赖</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111711.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/1920px-Palace_of_Westminster_London_-_Feb_2007-150x120.jpg" align ="left"></a>二十位英国保守党议员周五（5月15日）致函贸易部长利兹·特鲁斯（Liz Truss），敦促政府重新考虑目前正在通过下议院的贸易法案，以摆脱该国依赖中国进口的问题。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月15日 10:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111788.md#1" target="_blank">台积电赴美设厂 蓬佩奥：来的正是时候</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111788.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/99896105867e20f59f0b390ef6e3c06e-150x120.jpg" align ="left"></a>全球晶圆代工厂龙头“台积电”周五（5月15日）宣布将在美国亚利桑那州（Arizona）设先进晶圆厂。美国国务卿蓬佩奥（Mike Pompeo）随即发布声明欢迎，同时表示台积电来的正是时候，因为中共正试图独霸先进技术，此投资有助增进美国国安。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月15日 9:52 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111731.md#1" target="_blank">【直播回放】5.15疫情追踪：川普抛震撼弹</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111731.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/download-62-150x120.jpg" align ="left"></a>欢迎收看新唐人、大纪元5月15日的“中共病毒追踪”每日联合直播节目。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月15日 8:50 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111731.md#1" target="_blank">【直播】5.15疫情追踪：川普抛震撼弹</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111731.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/download-62-150x120.jpg" align ="left"></a>欢迎收看新唐人、大纪元5月15日的“中共病毒追踪”每日联合直播节目。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月15日 8:50 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110809.md#1" target="_blank">【十字路口】美中要全面脱钩 中国五大经济警讯</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110809.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/download-6-1-150x120.jpg" align ="left"></a>川习翻脸？美中要全面脱钩；制鞋龙头关厂，预示中国五大经济警讯。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月15日 7:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110567.md#1" target="_blank">加拿大三级政要贺法轮大法洪传28周年（3）</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110567.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/2017-5-10-canada-ottawa_01-ss-150x120.jpg" align ="left"></a>2020年5月13日是法轮功（也称法轮大法）开传28周年纪念日、第21届“世界法轮大法日”，也是法轮功创始人李洪志先生69岁的华诞。加拿大联邦、省、市议员，纷纷向法轮大法学会发来贺信、贺词，很多政要意识到危难时，法轮大法的重要性，真善忍的重要性。
 
