--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/carc2844/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/carc2844/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/carc2844/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/carc2844/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/carc2844/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=zcox2XJAms574" rel="nofollow">大纪元</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=D8Ax1TtAnol74" rel="nofollow">动态网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=G5IN0M9kn5F64" rel="nofollow">神州</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wf4N4cAnik9Rs0" rel="nofollow">退党</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oQhDrP9jaNomgd953b1AgeVB1TtAnol74" rel="nofollow">九评</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=8D43fA4loYFTi0" rel="nofollow">网门</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Sp8g2msSlexkp0" rel="nofollow">神韵</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=ZiIMbsVmsNV54" rel="nofollow">新纪元</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oTQid61TrHh44" rel="nofollow">看中国</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=tOA2cZR4kmZ74" rel="nofollow">明慧网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=sM1DqTVg5hMgn4FQl7oQjflQm187n3t4q0" rel="nofollow">明慧十方</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=vPRklaR07gs12hxAhrdwgbJkm7RxrotQgI12" rel="nofollow">明慧焦点</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Nug07FB5h2d64" rel="nofollow">希望之声</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Trlljilh3b4huwVSsHESoz5SvBo5o-J7l0" rel="nofollow">漫谈党文化</a ></p><p><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=C9gN1Qpkmpp74" rel="nofollow">新唐人</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=LrN5nvs5grJMkhpwijNQ48Z2nK5nsu12" rel="nofollow">亚太台</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=yNJnohBwu4JRnM12" rel="nofollow">直播</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=UkhBjj9N2703cJEnpFp7aDNCryFD8jdCoAB44" rel="nofollow">传奇</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=RpJRggtN0fc1hvNmsJMmoxZmsDgBpVBDl0" rel="nofollow">神话</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=7Hlmvylie_4ytNRDoYI7sOVDrSsQtKxmh0" rel="nofollow">人生</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7Vx128g1qYAlkBk5kBlmnpDbvZCtMR54" rel="nofollow">伪火</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=QoxBgvpN29ghhs95sKQCpwN6sEklpUVTl0" rel="nofollow">真相片</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7VN0tEklpp46nNBniFA4zNSsTx54" rel="nofollow">藏字石</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=hZZTpYJ38DA2aR8mvNV6cfhAha9B2XJAms574" rel="nofollow">短视频</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=4ExCsLpie-gitI9Sv-UTtTRToVE4tHZ6g0" rel="nofollow">告诉未来</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=F5tQn4dM6s000tEklpp46nNBniFA4zNSsTx54" rel="nofollow">终级目的</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=i_V7oZxP9wAOaQk6vOZS3etQhddl2WhQmv174" rel="nofollow">中共活摘</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wcNAlbFM4kwgk8pQm38QibBRhtU6m7d4r0" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=tNdTq8Zw5gg159Uli5F513xAi6pA7LZBh0R64" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wxplpXtRkrkNgmk0h9BQhpZ1ru5kgK12" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=EVFAnQZn5vtNp5dw36Ul2os5nu9Biic6rPt7m0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=RpJRggtN2kk4ni1DbJp6oI17all6u_t54" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=qSp7qR1jbfwRgfhB2994j0N51N54nqJ64" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=gYNDpXFj8ysiaScCuMRmcMlkhblR2UFklt974" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=tNdTq8ZM6nI0n7J4m6kAj8h4m0Qmn0pQr0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=rT5nqS535lc13thAintwhfZkhr5wssdQhE12" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=1JZStIJyd-w3eB8nrxV78-hDtW9CebJDqI544" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=mWF7rNhz8EMicC5kjiNMi09AjupMt7V5mR12" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=A8xAkfpg6vEN0kZQg0Vhnm15n0xhplxAjD12" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=8AhCvz9ieXUPfEdTvAFjuON7sIhjgNNCqX12" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=4ExCsLpye-EP8QZSowVjvS17vwxjhRxCr712" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=OuV5gtxx1aoNgq1ljhY6pCFCsGIRqWNnk0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=zfBkkeB04sI11lNAgvZxnntln3BxqkJQjw12" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=yeV4kdxM5roMka1kn10kllJlhrwCm5RAo0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=B9JQk0t07rQ171olkt947r1BkuVA5DtBj8l64" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Xn5limVycO8jdGYDpABn9ABmqDBTfcVnoxV44" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=F5tQn4dM7t4w7b95m5B1mtRRkdd1oi97tp12" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Trlljil12c4huwVSsHESoz5SvBo5o-J7l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=UkhBjj9N2703cJEnpFp7aDNCryFD8jdCoAB44" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=yeV4kdxM4owN64k5j2ZR7utRltdk6GhRif164" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=3LBmsKBif-I39RNCo-ZzvTtnvzBziQJSr012" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=cw1CuDVjazMjrQFTpToTv-lTqN84jjt5u0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=j-Bno_BPaGkzoZ5DrMY4h6FAkaITiqNls0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/carc2844/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/carc2844/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/carc2844/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/carc2844/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/8/n12093816.md#1" target="_blank">常忍：恶人遭举报与现世报的下场</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/8/n12093816.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/95d4b9ee87d4abf9229f27be738525d0-600x400-450x300-150x120.jpg" align ="left"></a>明慧网五月七日报导，迫害法轮功的两个恶人郑奎与闫峰山遭举报。自二零一五年郑奎任职江苏省连云港市赣榆区公安局“六一零办公室”头目以来，不遗余力的迫害法轮功学员；闫峰山担任山东省潍坊市寒亭国保大队长期间，以欺骗、撬门、翻墙，甚至恐吓家属等手段，先后绑架与非法关押法轮功学员159人次，行径犹如土匪。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月09日 9:02 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/8/n12094232.md#1" target="_blank">原中纪委官员回首往事话退党</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/8/n12094232.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/wyc-150x120.jpg" align ="left"></a>5月13日，是第21个“世界法轮功大法日”，全世界法轮功学员都在以不同方式纪念这个伟大的节日。作为一名原中纪委监察部官员，同时又是一名法轮功修炼者，在这个特别的节日到来前，我想结合我的亲身经历，谈一谈回归对神的信仰与敬畏，尽快退出中共党、团、队这个话题。
+
+1963年10月，我出生在湖北省仙桃市一个贫穷农民家庭。5.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月09日 8:19 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/8/n12094060.md#1" target="_blank">周晓辉：将病毒与珍珠港和911并列 川普要出重手</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/8/n12094060.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1211401258-600x400-1-150x120.jpg" align ="left"></a>当地时间5月6日，美国总统川普（特朗普）在白宫椭圆形办公室说了这样一番话：“我们国家遭受了有史以来最严重的袭击(attack)，这是美国历史上遭受的最严重的攻击。这比珍珠港突袭更糟糕，比‘911’世界贸易中心恐怖袭击更惨重。我们从来没有经历过这样的攻击，而它根本就不应该发生。它本应该在源头就被控制住，本可以被控制在中国.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月09日 4:35 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/8/n12093960.md#1" target="_blank">颜丹：从口罩厂倒闭看“中国制造”的处境</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/8/n12093960.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/n95-mask_1627741090-600x400-150x120.jpg" align ="left"></a>最近，中国大陆传来消息，说生产口罩的工厂开始出现倒闭潮。这个消息很让人震惊，尤其是在“很多国家都面临口罩、防护服、呼吸机等防疫物资缺口”的当下。
 
 一个多月前，中共当局深知这些国家都“希望得到中国援助或从中国购买”，于是就派战狼发言人耿爽隔空喊话：“如果有人说‘中国制造有毒’，那么请说这种话的人，不要戴中国制造的口.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月09日 3:39 AM			</td></tr>
@@ -31,11 +36,24 @@
 “国际锐评”是中国国际广播电台新闻中心的微信公众号，由中宣部国际新闻评论员组成，是央媒新媒体中主打国际传播的栏目。其从4月27日至5月3日连续推出的文章标题是.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月08日 1:26 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/7/n12090877.md#1" target="_blank">张林：中共是打了鸡血的苏联！</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/7/n12090877.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/1308190146041758-150x120.jpg" align ="left"></a>自从川普担任总统以来，福克斯电视台的收视率急遽升高，早已成为美国首屈一指的电视台。而自从中共病毒肆虐全球以来，福克斯电视台对中共的罪恶进行了大量揭露。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月08日 12:46 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/7/n12089755.md#1" target="_blank">石铭：迫害法轮功的江泽民集团正在快速解体</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/7/n12089755.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/1-234-600x400-150x120.jpg" align ="left"></a>近一段时间海外媒体不断传出中共内部的人事变动，许多江派人马落马、下台或面临危局，由于其中多数都曾经主导或参与迫害法轮功，给人的印象是迫害法轮功的江氏集团正在快速解体。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月07日 5:35 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/7/n12089848.md#1" target="_blank">禾乃：我不爱国，我爱人</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/7/n12089848.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/04/1602131902112603-600x400-150x120.jpg" align ="left"></a>本文原是写给小朋友看的，内容粗浅，但是所讲解的观念，多少可以增强对中共洗脑的抗体，进而产生“爱国癌免疫力”。我们要反洗脑。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月07日 5:04 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/7/n12089756.md#1" target="_blank">程晓容：大瘟疫提示各国 与中共打交道无双赢</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/7/n12089756.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/download-19-150x120.jpg" align ="left"></a>中共在应对疫情的过程中，演出了内外五部曲，凸显“狼性”。5月6日，美国国务卿蓬佩奥表示，中共与自由世界没有共同民主价值观，与共产极权打交道没有双赢。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月07日 4:03 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/7/n12089625.md#1" target="_blank">舒炪：从司徒雷登到彭佩奥，中共谩骂有用吗？</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/7/n12089625.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/2019-08-26-16406-GettyImages-961387648-600x400-150x120.jpg" align ="left"></a>近日，中共开动官宣对美国国务卿彭佩奥展开轮番谩骂。谩骂有别于批判，后者需要逻辑与证据，而前者只需要与文明相敌对的无耻与流氓精神即可。说谎有时还是需要智商的，但谩骂全凭放大音量耍泼骂街。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月07日 3:45 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/7/n12089516.md#1" target="_blank">【网海拾贝】坑人没坑成，反倒坑了自己</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/7/n12089516.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/20200504Taiwan_mask_donation-150x120.jpg" align ="left"></a>中国大陆口罩厂出现倒闭潮。有网友和业者透露，盲目扩充，口罩机和口罩原材料价格暴涨，国外对口罩要求变严格后，无法外销，造成口罩厂的倒闭潮。5月2号，安徽安庆一家口罩厂倒闭，滞销的口罩堆了满满一院子的视频传遍网路。而早在4月25号，就有网友曝光，放长假的富士康附近的口罩厂也倒闭了。据4月30号的youtube视频显示，一家.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月07日 3:26 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/7/n12089059.md#1" target="_blank">如何才能不在历史留骂名——致习近平主席的公开信</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/7/n12089059.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/b654c7cb3cb0710adab5d6e6552f4660-150x120.jpg" align ="left"></a>4月20日，公安部副部长孙力军被抓的消息公布的第二天，您去了陕西秦岭。您一直念念不忘秦岭，是因为，在您的心灵深处，知道秦岭是“龙脉”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月07日 12:49 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/9/n12094474.md#1" target="_blank">赵文汕：“正能量”综合症</a><br></h3>那天，遇到这样一个年轻病人。
+
+我告诉他，通过检查，发现他有胃炎。
+
+他眼神复杂地盯着我看了会儿，仿佛倒是我得了什么不可思议的病，然后忽然激动起来，开口对我说道：
+
+“医生，你内心为什么这么阴暗呢！看问题怎么从来只看负面，看不到好的，光明的一面呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月09日 9:36 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/9/n12094492.md#1" target="_blank">祝君安：渔家傲·粉红怨</a><br></h3>神州春来妖氛戾
+红巢鸱枭无去意
+四面楚歌动鼓鼙
+甩锅鄙
+浮华橱窗小区闭
+
+洋酒一杯万里飞
+盲然归来游子悔
+厂矿萧萧漫瘟鬼
+亲杳去
+寸草难报三春晖......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月09日 9:34 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/8/n12091860.md#1" target="_blank">【网海拾贝】中共的法西斯逻辑：不许有反对者</a><br></h3>今天中共驻港中联办称“除非将黑衣暴徒全部清除，否则香港永远不会平静”。这就是中共法西斯逻辑：消灭反对者！不允许有反对者！中共不允许不同意见者存在，正是那么多香港人走上街头的原因。香港人不愿意失去本已拥有的民主和自由。——@LifetimeUSCN......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月08日 10:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/7/n12091056.md#1" target="_blank">吐为快：体制之恶</a><br></h3>一介书生反民运，时来运转获蟾亲
 推崇专制攫权力，臭味相投君臣倾
