--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -5,13 +5,13 @@
 
 中共肺炎全球疫情及美国疫情大数据请点击这里。
 要点：
-美劳工部长：对“失业”一词表示质疑
+封锁令即将进入第九周 英国人抗议
+ 美劳工部长：对“失业”一词表示质疑
 川普：美国将向印度捐献呼吸机
 川普：未定是否再资助世卫
 国际挺台参与WHA 中共施压谭德塞密信遭曝光
 川普或恢复世卫部分资助
-美众院通过3兆元纾困案 将送交参院
-美国农业部启动计划 将分送30亿元食.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月16日 4:03 PM							</td></tr>
+美众院通过3兆元纾困案 将送交参院.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月16日 4:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12113707.md#1" target="_blank">【一线采访】舒兰书记被免 更多疫情细节曝光</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12113707.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/aac42fc2f187642a16e694527e030e3b-150x120.png" align ="left"></a>受到中共病毒（武汉肺炎）袭击，舒兰洗衣工传染链持续扩大，大纪元获悉可靠消息指出，这次传染链涉及多个公部门，令当局十分紧张。直接导致舒兰市委书记李鹏飞于15日深夜传出被免职。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月16日 1:55 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12113566.md#1" target="_blank">美官员：未保证台积电可向华为出售美技术</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12113566.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/10/cfa9d2b7efcdd7121f3fcd63100c23a5-150x120.jpg" align ="left"></a>周五（5月14日），全球最大芯片代工企业台积电（TMSC）宣布，将斥资120亿美元在亚利桑那州建造一家芯片工厂。但美国国务院官员表示，台积电并未得到任何保证，将获得向中国华为出售美国技术的许可。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月16日 11:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112803.md#1" target="_blank">全球政要贺大法日 向李洪志先生致敬（1）</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112803.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/0007-150x120.jpg" align ="left"></a>全球逾百名政要，纷纷致函恭贺法轮大法日和法轮大法洪传28周年；他们向法轮功创始人李洪志先生致敬，赞扬李洪志先生所传播的“真、善、忍”价值造福人类。
