--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -15,7 +15,7 @@
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/19/7/15/n11386580.md#1" target="_blank">告别尿失禁困扰 中医治疗和日常保养法</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/19/7/15/n11386580.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/Urinary-incontinence_1254545386-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/19/7/6/n11368670.md#1" target="_blank">容易流汗汗臭？2种茶饮止汗 补气补血</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/19/7/6/n11368670.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/sweat_1405432769-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/17/8/22/n9555520.md#1" target="_blank">为什么绝症有时可以不医而愈？</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/17/8/22/n9555520.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2017/08/shutterstock_232227997-320x200.jpg"></a></td></tr>
-<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12107245.md#1" target="_blank">突然倒地死亡？中共病毒和流感区别远不止症状</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12107245.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/flu-ccp-virus-covid-19_1689776749-320x200.jpg"></a></td></tr>
+<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12107245.md#1" target="_blank">史上最可怕病毒？中共病毒和流感区别远不止症状</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12107245.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/flu-ccp-virus-covid-19_1689776749-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12110280.md#1" target="_blank">皮肤长疹子或水泡？中共肺炎4类奇特新症状</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12110280.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/shutterstock_1682165356-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106133.md#1" target="_blank">疫苗真是中共病毒解药？问世面临三大疑问</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106133.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages3-89747046-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
@@ -25,7 +25,7 @@
 <h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12104117.md#1" target="_blank">皮肤痒、大便黏腻是体内有湿？3碗汤饮除湿气</a><br></h3>
 <h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106133.md#1" target="_blank">疫苗真是中共病毒解药？问世面临三大疑问</a><br></h3>
 <h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106398.md#1" target="_blank">增肌一定要吃蛋白质 植物性蛋白更能燃脂</a><br></h3>
-<h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12107245.md#1" target="_blank">突然倒地死亡？中共病毒和流感区别远不止症状</a><br></h3>
+<h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12107245.md#1" target="_blank">史上最可怕病毒？中共病毒和流感区别远不止症状</a><br></h3>
 <h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109244.md#1" target="_blank">【胡乃文开讲】揉揉腹部3分钟 宿便排干净 中医教你解腹痛</a><br></h3>
 <h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12110280.md#1" target="_blank">皮肤长疹子或水泡？中共肺炎4类奇特新症状</a><br></h3>
 <h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114903.md#1" target="_blank">减肥空腹 不吃糖类食物 都让你的肌肉流失</a><br></h3>
