--- a/gb/ncid2420_3.md
+++ b/gb/ncid2420_3.md
@@ -28,7 +28,7 @@
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/1/29/n11830628.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1197314798-320x200.jpg" align ="left"></a><a href="https://github.com/carc2844/djy/blob/master/gb/20/1/29/n11830628.md#1" target="_blank">【每日更新】海外各国中共肺炎确诊人数</a><br></h3>截至美东时间1月29日下午3点，中国大陆以外的国家／地区共确诊91......<br><img align="bottom" src="https://raw.githubusercontent.com/carc2844/www/master/t/ntdtv/time.gif">01月30日</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/1/29/n11830467.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2019/12/000_1N493S-320x200.jpg" align ="left"></a><a href="https://github.com/carc2844/djy/blob/master/gb/20/1/29/n11830467.md#1" target="_blank">英国撤侨 中共不许中国籍家属同撤离</a><br></h3>英国《卫报》周三（1月29日）报导说，英国政府紧急敦促中共当局允许......<br><img align="bottom" src="https://raw.githubusercontent.com/carc2844/www/master/t/ntdtv/time.gif">01月30日</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/1/28/n11827953.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/01/000_1OG8SF-320x200.jpg" align ="left"></a><a href="https://github.com/carc2844/djy/blob/master/gb/20/1/28/n11827953.md#1" target="_blank">将中共五星旗改成5枚冠状病毒 丹媒拒道歉</a><br></h3>丹麦媒体《日德兰邮报》（Jyllands-Posten）在其周一（......<br><img align="bottom" src="https://raw.githubusercontent.com/carc2844/www/master/t/ntdtv/time.gif">01月29日</td></tr>
-<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/1/27/n11825769.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2005/10/5103018561767-320x200.jpg" align ="left"></a><a href="https://github.com/carc2844/djy/blob/master/gb/20/1/27/n11825769.md#1" target="_blank">中共肺炎或冲击中国GDP 影响全球经济</a><br></h3>随着世界范围内发现更多的中共病毒（俗称武汉病毒、新型冠状病毒）确证......<br><img align="bottom" src="https://raw.githubusercontent.com/carc2844/www/master/t/ntdtv/time.gif">01月28日</td></tr>
+<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/1/27/n11825769.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2005/10/5103018561767-320x200.jpg" align ="left"></a><a href="https://github.com/carc2844/djy/blob/master/gb/20/1/27/n11825769.md#1" target="_blank">武汉肺炎或冲击中国GDP 影响全球经济</a><br></h3>随着世界范围内发现更多的新冠状病毒确证病例，因对中国国内疫情快速传......<br><img align="bottom" src="https://raw.githubusercontent.com/carc2844/www/master/t/ntdtv/time.gif">01月28日</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/1/27/n11825732.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/01/15ed0743245a2d7f_ttl7dayLSN_trump-320x200.jpg" align ="left"></a><a href="https://github.com/carc2844/djy/blob/master/gb/20/1/27/n11825732.md#1" target="_blank">川普：必要时美方会给予中国帮助 应对疫情</a><br></h3>美国总统川普（特朗普）周一（1月27日）表示，必要时、美方会给予中......<br><img align="bottom" src="https://raw.githubusercontent.com/carc2844/www/master/t/ntdtv/time.gif">01月28日</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/ncid2420_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/ncid2420.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/ncid2420_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/ncid2420_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/ncid2420_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/ncid2420_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/ncid2420_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/ncid2420_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/ncid2420_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/ncid2420_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/ncid2420_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/carc2844/djy/blob/master/gb/ncid2420_3.md#1<br><a href="https://github.com/carc2844/djy/blob/master/gb/ncid2420_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/carc2844/djy/blob/master/gb/ncid2420_3.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/ncid2420_3.htm">https://www.epochtimes.com/gb/ncid2420_3.htm</a>    （国内需<a href="https://github.com/carc2844/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</p>
